[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "planet-data-pipeline"
version = "0.0.1"
description = "Scripts to pull data off planet.com"
dependencies = [
    "planet",
    "geopandas"
]

[project.scripts]
"finder" = "scripts.finder:main"


